src/test/deca/context/invalid/pierre/objects/returnInVoid.deca
class test {
    void method() {
        return 1;
    }
}
